don't try to create OUString from editeng directly, tdf#94542

editeng uses special control characters (apparently 0x01) that need to
be translated by editeng to the real characters. Let EditEngine handle
the conversion from editeng string to OUString.

Change-Id: If5014e1ada7f1df933a084b17bb307035ce01cc6
Reviewed-on: https://gerrit.libreoffice.org/19065
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>